# OpenGLExample

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: fragmentshader.fs  vertexshader.vs
includes/: includes.hpp
sources/: ShaderUtil.cpp  ShaderUtil.h  main.cpp
